feat!: V2 Java client, named vectors
BREAKING